make concurrency use all logical cores

--- a/offscreen/index.html
+++ b/offscreen/index.html
@@ -38,8 +38,7 @@
         Timestamp: <span id="timestamp"></span>
     </h3>
     <div id="wrapper" class="canvas-wrapper">
-        <canvas id="myCanvas1"></canvas>
-        <canvas id="myCanvas2"></canvas>
+        <canvas id="myCanvas"></canvas>
     </div>
     <div>
         <p>
