update github pages texts

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>WWW Applications Demo</h1>
+<p>Comparing Canvas, OffscreenCanvas(, and SVG)</p>
 
 <a href = "./canvas/index.html">canvas</a>
 <a href = "./offscreen/index.html">offscreen</a>
