--- a/offscreen/index.html
+++ b/offscreen/index.html
@@ -51,6 +51,7 @@
             <a href="?50000">50000 points</a>
         </p>
     </div>
+    <a href = "../index.html">back</a>
     <script src="script.js"></script>
 </body>
 </html>
