--- a/canvas/index.html
+++ b/canvas/index.html
@@ -47,6 +47,7 @@
             <a href="?50000">50000 points</a>
         </p>
     </div>
+    <a href = "../index.html">back</a>
     <script src="script.js"></script>
 </body>
 </html>
