--- a/offscreen/index.html
+++ b/offscreen/index.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box
-        }
-        #myCanvas {
-            padding: 0;
-            margin: 20px auto;
-            display: block;
-            width: 500px;
-            height: 500px;
-            position: relative;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: white;
-            border: 1px solid black;
-        }
-        #content {
-            text-align: center;
-            margin-top: 20px;
-        }
-        #timestampH3 {
-            margin-top:10px;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      #myCanvas {
+        padding: 0;
+        margin: 20px auto;
+        display: block;
+        width: 750;
+        height: 750;
+        position: relative;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: white;
+        border: 1px solid black;
+      }
+      #content {
+        text-align: center;
+        margin-top: 20px;
+      }
+      #timestampH3 {
+        margin-top: 10px;
+      }
     </style>
-</head>
-<body id="content">
+  </head>
+  <body id="content">
     <h1>Demo app using ordinary Canvas</h1>
-    <h3 id="timestampH3">
-        Timestamp: <span id="timestamp"></span>
-    </h3>
+    <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
     <canvas id="myCanvas"></canvas>
     <div>
-        <p>
-            Point count:
-            <a href="?500">500 points</a> |
-            <a href="?1000">1000 points</a> |
-            <a href="?3000">3000 points</a> |
-            <a href="?5000">5000 points</a> |
-            <a href="?10000">10000 points</a> |
-            <a href="?50000">50000 points</a>
-        </p>
+      <p>
+        Point count:
+        <a href="?500">500 points</a> | <a href="?1000">1000 points</a> |
+        <a href="?3000">3000 points</a> | <a href="?5000">5000 points</a> |
+        <a href="?10000">10000 points</a> |
+        <a href="?50000">50000 points</a>
+      </p>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
-
