added new main page, small changes in demoes

--- a/svg/index.html
+++ b/svg/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" href="svg.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
@@ -22,6 +22,8 @@
         <a href="?50000">50000 points</a>
       </p>
     </div>
+  </br>
+    <a href="../index.html">Back to demo main page</a>
     <script src="script.js"></script>
   </body>
 </html>
