--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,49 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      #myCanvas {
-        padding: 0;
-        margin: 20px auto;
-        display: block;
-        width: 750px;
-        height: 750px;
-        position: relative;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: white;
-        border: 1px solid black;
-      }
-      #content {
-        text-align: center;
-        margin-top: 20px;
-      }
-      #timestampH3 {
-        margin-top: 10px;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900"
+      rel="stylesheet"
+    />
+    <link
+    href="index.css"
+    rel="stylesheet"
+  />
   </head>
   <body id="content">
-    <h1>Demo app using ordinary Canvas</h1>
-    <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
-    <canvas id="myCanvas"></canvas>
-    <div>
-      <p>
-        Point count:
-        <a href="?500">500 points</a> | <a href="?1000">1000 points</a> |
-        <a href="?3000">3000 points</a> | <a href="?5000">5000 points</a> |
-        <a href="?10000">10000 points</a> | <a href="?25000">25000 points</a> |
-        <a href="?50000">50000 points</a>
-      </p>
+    <div class="container">
+      <h1>Demo app using ordinary Canvas</h1>
+      <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+      <canvas id="myCanvas"></canvas>
+      <div>
+        <p>
+          Point count:
+          <a href="?500">500 points</a> | <a href="?1000">1000 points</a> |
+          <a href="?3000">3000 points</a> | <a href="?5000">5000 points</a> |
+          <a href="?10000">10000 points</a> | <a href="?25000">25000 points</a> |
+          <a href="?50000">50000 points</a>
+        </p>
+      </div>
+    </br>
+    <a href="../index.html">Back to demo main page</a>
     </div>
-    <a href="../index.html">back</a>
     <script src="script.js"></script>
   </body>
 </html>
