--- a/offscreen/index.html
+++ b/offscreen/index.html
@@ -1,53 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      canvas {
-        padding: 0;
-        display: block;
-        width: 500px;
-        height: 500px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border: 1px solid black;
-      }
-      #content {
-        text-align: center;
-        margin-top: 20px;
-      }
-      #timestampH3 {
-        margin-top: 10px;
-      }
-      .canvas-wrapper {
-        position: relative;
-        height: 500px;
-        width: 500px;
-        margin: 20px auto;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900"
+      rel="stylesheet"
+    />
+    <link
+      href="index.css"
+      rel="stylesheet"
+    />
   </head>
   <body id="content">
-    <h1>Demo app using offscreen Canvas</h1>
-    <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
-    <div id="wrapper" class="canvas-wrapper">
-      <canvas id="myCanvas"></canvas>
+    <div class="container">
+      <h1>Demo app using offscreen Canvas</h1>
+      <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+      <div id="wrapper" class="canvas-wrapper">
+        <canvas id="myCanvas"></canvas>
+      </div>
+      <div>
+        <p>
+          Point count:
+          <a href="?500">500 points</a> | <a href="?1000">1000 points</a> |
+          <a href="?3000">3000 points</a> | <a href="?5000">5000 points</a> |
+          <a href="?10000">10000 points</a> | <a href="?25000">25000 points</a> |
+          <a href="?50000">50000 points</a>
+        </p>
+      </div>
+      </br>
+      <a href="../index.html">Back to demo main page</a>
     </div>
-    <div>
-      <p>
-        Point count:
-        <a href="?500">500 points</a> | <a href="?1000">1000 points</a> |
-        <a href="?3000">3000 points</a> | <a href="?5000">5000 points</a> |
-        <a href="?10000">10000 points</a> | <a href="?25000">25000 points</a> |
-        <a href="?50000">50000 points</a>
-      </p>
-    </div>
-    <a href="../index.html">back</a>
     <script src="script.js"></script>
   </body>
 </html>
