centered svg demo

--- a/svg/index.html
+++ b/svg/index.html
@@ -9,21 +9,23 @@
     />
   </head>
   <body id="content">
-    <h1>Demo app using ordinary SVG</h1>
-    <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
-    <div id="balls"></div>
-    <script src="svg.js"></script>
-    <div>
-      <p>
-        Point count:
-        <a href="?50">50 points</a> | <a href="?500">500 points</a> |
-        <a href="?1000">1000 points</a> | <a href="?3000">3000 points</a> |
-        <a href="?5000">5000 points</a> | <a href="?10000">10000 points</a> |
-        <a href="?50000">50000 points</a>
-      </p>
+    <div class="container">
+      <h1>Demo app using ordinary SVG</h1>
+      <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+      <div id="balls"></div>
+      <script src="svg.js"></script>
+      <div>
+        <p>
+          Point count:
+          <a href="?50">50 points</a> | <a href="?500">500 points</a> |
+          <a href="?1000">1000 points</a> | <a href="?3000">3000 points</a> |
+          <a href="?5000">5000 points</a> | <a href="?10000">10000 points</a> |
+          <a href="?50000">50000 points</a>
+        </p>
+      </div>
+    </br>
+      <a href="../index.html">Back to demo main page</a>
     </div>
-  </br>
-    <a href="../index.html">Back to demo main page</a>
     <script src="script.js"></script>
   </body>
 </html>
