code formatting, improve query params to include worker count, rework query params elsewhere, fix stylings

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <h1>Demo app using Canvas</h1>
     <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+    <h4 id="point_count"></h4>
     <canvas id="myCanvas"></canvas>
     <div id="point_count_selector"></div>
     </br>
@@ -20,8 +21,8 @@
       <embed type="text/html" src="../shared/scroll.html" width="500" height="200">
     </div>
   </div>
-  <script src="script.js"></script>
   <script src="../shared/shared.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
