--- a/offscreen/index.html
+++ b/offscreen/index.html
@@ -10,7 +10,10 @@
 <body id="content">
   <div class="container">
     <h1>Demo app using offscreen Canvas</h1>
+    <div id="worker_count_selector"></div>
     <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+    <h4 id="point_count"></h4>
+    <h4 id="worker_count"></h4>
     <div id="wrapper" class="canvas-wrapper">
       <canvas id="myCanvas"></canvas>
     </div>
@@ -22,8 +25,8 @@
       <embed type="text/html" src="../shared/scroll.html" width="500" height="200">
     </div>
   </div>
-  <script src="script.js"></script>
   <script src="../shared/shared.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
