--- a/svg/index.html
+++ b/svg/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <h1>Demo app using SVG</h1>
     <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
+    <h4 id="point_count"></h4>
     <div id="balls"></div>
-    <script src="svg.js"></script>
     <div id="point_count_selector"></div>
     </br>
     <a href="../index.html">Back to demo main page</a>
@@ -23,6 +23,7 @@
     </div>
   </div>
   <script src="../shared/shared.js"></script>
+  <script src="svg.js"></script>
 </body>
 
 </html>
