--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="https://d3js.org/d3.v4.js"></script>
 </head>
 <body>
-    <div class="content">
+    <div class="content" style="margin-top: 50px;">
         <h1>WWW Applications Demo</h1>
         <div class="list">
             <p>A quick visual comparison between:</p>
             <ul>
-                <li><a href = "./canvas/index.html">Canvas (demo)</a></li>
-                <li><a href = "./offscreen/index.html">Offscreen Canvas (demo)</a></li>
-                <li><a href = "./svg/index.html">SVG (demo)</a></li>
+                <li><a href = "./canvas/index.html?points=250">Canvas demo</a></li>
+                <li><a href = "./offscreen/index.html?points=250">Offscreen Canvas demo</a></li>
+                <li><a href = "./svg/index.html?points=250">SVG demo</a></li>
             </ul>
         </div>
         <h2>FPS comparison (165hz screen)</h2>
