ssvg almost working lol

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href = "./canvas/index.html?points=250">Canvas demo</a></li>
                 <li><a href = "./offscreen/index.html?points=250">Offscreen Canvas demo</a></li>
                 <li><a href = "./svg/index.html?points=250">SVG demo</a></li>
+                <li><a href = "./ssvg/index.html?points=250">SSVG demo</a></li>
             </ul>
         </div>
         <h2>FPS comparison (165hz screen)</h2>
