Revert testing code, reword index page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <div class="content" style="margin-top: 50px;">
-    <h1>WWW Applications Demo</h1>
+    <h1>WWW Applications demo</h1>
     <div class="list">
-      <p>A quick visual comparison between:</p>
+      <p>Render scene using:</p>
       <ul>
-        <li><a href="./canvas/index.html?points=250">Canvas demo</a></li>
-        <li><a href="./offscreen/index.html?points=250">Offscreen Canvas demo</a></li>
-        <li><a href="./svg/index.html?points=250">SVG demo</a></li>
+        <li><a href="./canvas/index.html?points=250">Canvas</a></li>
+        <li><a href="./offscreen/index.html?points=250">Offscreen Canvas</a></li>
+        <li><a href="./svg/index.html?points=250">SVG</a></li>
       </ul>
     </div>
     <h2>FPS comparison (165hz screen)</h2>
