Add another offscreen dmeo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <p>Render scene using:</p>
       <ul>
         <li><a href="./canvas/index.html?points=250">Canvas</a></li>
-        <li><a href="./offscreen/index.html?points=250">Offscreen Canvas</a></li>
+        <li><a href="./offscreen/index.html?points=250">Offscreen Canvas (logic in worker)</a></li>
+        <li><a href="./offscreen/index2.html?points=250">Offscreen Canvas (logic in main)</a></li>
         <li><a href="./svg/index.html?points=250">SVG</a></li>
       </ul>
     </div>
