--- a/offscreen/index2.html
+++ b/offscreen/index2.html
@@ -9,7 +9,7 @@
 
 <body id="content">
   <div class="container">
-    <h1>Demo app using offscreen Canvas (Logic in worker)</h1>
+    <h1>Demo app using offscreen Canvas (Logic in main)</h1>
     <div id="worker_count_selector"></div>
     <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
     <h4 id="point_count"></h4>
@@ -26,7 +26,7 @@
     </div>
   </div>
   <script src="../shared/shared.js"></script>
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </body>
 
 </html>
