comment out chart, add SSVG link to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="content" style="margin-top: 50px;">
     <h1>WWW Applications demo</h1>
+    <br/>
     <div class="list">
       <p>Render scene using:</p>
       <ul>
@@ -18,17 +19,18 @@
         <li><a href="./offscreen/index.html?points=250">Offscreen Canvas (logic in worker)</a></li>
         <li><a href="./offscreen/index2.html?points=250">Offscreen Canvas (logic in main)</a></li>
         <li><a href="./svg/index.html?points=250">SVG</a></li>
+        <li><a href="./ssvg/index.html?points=250">SSVG</a></li>
       </ul>
     </div>
-    <h2>FPS comparison (165hz screen)</h2>
+    <!-- <h2>FPS comparison (165hz screen)</h2>
     <div class="buttons">
       <button onclick="update(data1)">500 points</button>
       <button onclick="update(data2)">1000 points</button>
       <button onclick="update(data3)">3000 points</button>
     </div>
-    <div id="my_dataviz"></div>
+    <div id="my_dataviz"></div> -->
   </div>
-  <script src="charts.js"></script>
+  <!-- <script src="charts.js"></script> -->
 </body>
 
 </html>
