--- a/ssvg/index.html
+++ b/ssvg/index.html
@@ -11,7 +11,7 @@
 
 <body id="content">
   <div class="container">
-    <h1>Demo app using SVG</h1>
+    <h1>Demo app using SSVG</h1>
     <h3 id="timestampH3">Timestamp: <span id="timestamp"></span></h3>
     <h4 id="point_count"></h4>
     <div id="balls"></div>
@@ -23,7 +23,8 @@
       <embed type="text/html" src="../shared/scroll.html" width="500" height="200">
     </div>
   </div>
-  <script src="https://unpkg.com/ssvg@1.4.5/ssvg-auto.js"></script>  
+  <script src="https://unpkg.com/ssvg@1.4.5/ssvg.js"></script>  
+  <script src="https://measure-fps.surge.sh/measureFPS.js"></script>
 
   <script src="../shared/shared.js"></script>
   <script src="ssvg.js"></script>
